# ELASwithOpencv

./: CMakeLists.txt
matlab/: elasMex.mexw64
test/: elasOpencvTest.cpp
